minor bug and style fixes for new login page

--- a/src/behaviors/shell-resize-behavior.html
+++ b/src/behaviors/shell-resize-behavior.html
@@ -42,11 +42,10 @@
           desktopMenuDisplay="flex";
           mobileMenuDisplay="none";
         };
-
         this.customStyle["--desktop-menu-display"]=desktopMenuDisplay;
         this.customStyle["--mobile-menu-display"]=mobileMenuDisplay;
         this.updateStyles();
-
+        this.fire("resize");
       },
     };
 
