--- a/src/pages/default/def-login/def-login.html
+++ b/src/pages/default/def-login/def-login.html
@@ -36,6 +36,7 @@
       .register-card paper-input{
         --paper-input-container-color:#FFFFFF;
         --paper-input-container-focus-color:#2fc19e;
+        --paper-input-container-input-color:#FFFFFF;
       }
       .login-card paper-input{
         --paper-input-container-focus-color:#2fc19e;
@@ -159,6 +160,7 @@
         color:#2fc19e;
         transition: all 0.5s ease;
         --paper-button:{
+          justify-content:flex-end;
           font-size:14px;
           font-weight:bold;
           padding-left:0;
