--- a/src/styles/common-styles.html
+++ b/src/styles/common-styles.html
@@ -280,7 +280,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       .multiItem{
         height:400px;
-        width:100%;
+        width:200px
       }
       .multiViewCard{
         width:100%;
