--- a/src/pages/test/test-test/test-test.html
+++ b/src/pages/test/test-test/test-test.html
@@ -9,331 +9,47 @@
 
     <style>
 
-      :host{
-        background-color:#2fc19e;
-      }
-      .padded{
-        padding:20px;
-      }
-      .loginBox{
-        width:300px;
-        height:450px;
-        position: absolute;
-        top: 50%; left: 50%;
-        transform: translate(-50%,-50%);
-      }
-      .register-card{
-        background-color:#7e57c2;
-      }
-      .register-card paper-input{
-        --paper-input-container-color:#FFFFFF;
-        --paper-input-container-focus-color:#2fc19e;
-      }
-      .login-card paper-input{
-        --paper-input-container-focus-color:#2fc19e;
-      }
-      .card-heading{
-        width:300px;
-        height:60px;
-        position:relative;
-      }
-      .tab-wrapper {
-        display: inline-block;
-        padding: 10px;
-        overflow: hidden;
-        width:100px;
-        height:100%;
-        position:absolute;
-        top:0;
-        right:0;
-        padding:0;
-        margin:0;
-      }
-      .tab-wrapper:hover {
-        cursor: pointer;
-      }
-      .tab-wrapper:hover [class*="button"]:after {
-        -webkit-transform: scale(1) translateZ(0);
-        -moz-transform: scale(1) translateZ(0);
-        -ms-transform: scale(1) translateZ(0);
-        -o-transform: scale(1) translateZ(0);
-        transform: scale(1) translateZ(0);
-        -webkit-transition: all 0.5s ease;
-        -moz-transition: all 0.5s ease;
-        transition: all 0.5s ease;
+      .main{
+        margin:50px 10% 50px 10%;
+        width:80%;
+        display:flex;
+        flex-flow: row wrap;
+        justify-content:center;
       }
 
-      [class*="button"] {
-        color: inherit;
-        position: relative;
-        z-index: 10;
-      }
-      [class*="button"]:after {
-        content: "";
-        width: 150%;
-        height: 0;
-        padding-top: 150%;
-        object-fit: contain;
-        position: absolute;
-        top: 10%;
-        right: 30%;
-        margin: -75%;
-        opacity: 1;
-        border-radius: 50%;
-        -webkit-transform: scale(0) translateZ(0);
-        -moz-transform: scale(0) translateZ(0);
-        -ms-transform: scale(0) translateZ(0);
-        -o-transform: scale(0) translateZ(0);
-        transform: scale(0) translateZ(0);
-        -webkit-transition: all 0.2s ease;
-        -moz-transition: all 0.2s ease;
-        transition: all 0.2s ease;
-        z-index: -1;
-      }
-      [class*="login"]:after{
-        background-color: #FFFFFF;
-      }
-      [class*="register"]:after{
-        background-color: #7e57c2;
-      }
-      [class*="forgot"]:after{
-        background-color: #7e57c2;
-      }
-      @-webkit-keyframes scaler {
-        0%, 50% {
-          -webkit-transform: scale(0) translateZ(0);
-        }
-        100% {
-          -webkit-transform: scale(1) translateZ(0);
-        }
-      }
-      @-moz-keyframes scaler {
-        0%, 50% {
-          -moz-transform: scale(0) translateZ(0);
-        }
-        100% {
-          -moz-transform: scale(1) translateZ(0);
-        }
-      }
-      @keyframes scaler {
-        0%, 50% {
-          -webkit-transform: scale(0) translateZ(0);
-          -moz-transform: scale(0) translateZ(0);
-          -ms-transform: scale(0) translateZ(0);
-          -o-transform: scale(0) translateZ(0);
-          transform: scale(0) translateZ(0);
-        }
-        100% {
-          -webkit-transform: scale(1) translateZ(0);
-          -moz-transform: scale(1) translateZ(0);
-          -ms-transform: scale(1) translateZ(0);
-          -o-transform: scale(1) translateZ(0);
-          transform: scale(1) translateZ(0);
-        }
-      }
-      .register-button{
-        position:absolute;
-        right:0;
-        top:0;
-        --paper-button-ink-color:#7e57c2;
-        color:#7e57c2;
-        transition: all 0.5s ease;
-        --paper-button:{
-          font-size:12px;
-          font-weight:bold;
-        };
-      }
-      .login-button, .forgot-button{
-        position:absolute;
-        right:0;
-        top:0;
-        --paper-button-ink-color:#2fc19e;
-        color:#2fc19e;
-        transition: all 0.5s ease;
-        --paper-button:{
-          font-size:14px;
-          font-weight:bold;
-          padding-left:0;
-          margin-left:0;
-        };
-      }
-      .white{
-        --paper-button-ink-color:#FFFFFF;
-        color:#FFFFFF;
-      }
-      .mode-name{
-        position:absolute;
-        bottom:0;
-        left:0;
+      .multiContainer{
         width:200px;
-        text-transform:uppercase;
-        margin:0;
-        padding-left:20px;
-        font-weight:bold;
-        font-size:130%;
+        height:300px;
+        padding:5px;
       }
-      .mode-login{
-        color:#2fc19e;
-      }
-      .mode-register{
-        color:#FFFFFF;
-      }
-      .login{
-
-      }
-      .action-button{
-        position:absolute;
-        bottom:80px;
-        left:20px;
-        right:20px;
-        margin:0;
-        background-color:#2fc19e;
-        color:#FFFFFF;
-      }
-      .forgot-password{
-        position:absolute;
-        bottom:10px;
-        left:0;
-        right:0;
-        text-align:center;
-        font-size:14px;
-        color:grey;
-        transition: all .25s ease;
-      }
-      .forgot-password:hover{
-        cursor:pointer;
-        opacity:.7;
-      }
-      #forgotPass{
-        background-color:#FFFFFF;
-        z-index:2;
-      }
-      .forgot-box{
-        position:relative;
+      .item{
+        height:100%;
+        width:100%;
       }
     </style>
 
-    <iron-collapse id="forgotPass" class="loginBox">
+    <div class="main">
 
-        <div class="card-heading">
-          <div class="tab-wrapper">
-            <paper-button on-tap="cancelForgot" class="forgot-button">X</paper-button>
-          </div>
-          <div class="mode-name mode-login">
-              Forgot Password
-          </div>
+      <template is="dom-repeat" items="[[testData]]" as="item">
+
+        <div class="multiContainer">
+          <paper-card class="item">
+            <p>
+              [[item.fName]]
+            </p>
+            <p>
+              [[item.lName]]
+            </p>
+            <p>
+              [[item.body]]
+            </p>
+
+          </paper-card>
         </div>
-        <div class="padded">
-          <iron-collapse id="forgotSection">
 
-            <p>
-              Please enter your email below and click reset password. A password reset email will be sent to your account email.
-            </p>
-            <paper-input label="Email Address" value="{{forgotEmail}}"></paper-input>
+      </template>
 
-            <paper-button on-tap="resetPass">reset password</paper-button>
-
-          </iron-collapse>
-
-          <iron-collapse id="forgotSuccess">
-
-            Success! Your password reset email has been sent to [[forgotEmail]]. Please allow 5 minutes before trying to send the password email again.
-
-          </iron-collapse>
-
-          <iron-collapse id="forgotError">
-            <p>
-              Oops! Something went wrong! The error is:
-              [[error]]
-            </p>
-            <p>
-              Please try again, contact your care home administrator, or contact support.
-            </p>
-
-          </iron-collapse>
-        </div>
-        <p on-tap="_closeForgotPass" class="forgot-password">
-          Go Back
-        </p>
-
-    </iron-collapse>
-
-    <span hidden$="[[loginDisplay]]">
-      <paper-card elevation="3" class="loginBox login-card">
-          <div class="card-heading">
-            <div id="registerWrapper" class="tab-wrapper">
-              <paper-button on-tap="_toggleTab" class="register-button">Register</paper-button>
-            </div>
-            <div class="mode-name mode-login">
-                log in
-            </div>
-          </div>
-          <div class="padded">
-            <paper-input
-              label="Your Email Address"
-              value="{{username}}"
-              required
-              auto-validate
-              pattern="[a-zA-Z0-9_\.\+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-\.]+"
-              error-message="Please enter a valid email.">
-            </paper-input>
-            <paper-input label="Password" type="password" label="password" value="{{password}}"></paper-input>
-            <paper-button class="guuey-button action-button" on-tap="emailSignIn">log in</paper-button>
-          </div>
-          <p on-tap="_openForgotPass" class="forgot-password">
-            Forgot your password?
-          </p>
-      </paper-card>
-    </span>
-
-    <span hidden$="[[!loginDisplay]]">
-      <paper-card elevation="3" class="loginBox register-card">
-          <div class="card-heading">
-            <div class="tab-wrapper">
-              <paper-button on-tap="_toggleTab" class="login-button">X</paper-button>
-            </div>
-            <div class="mode-name mode-register">
-                register
-            </div>
-          </div>
-
-          <div class="padded">
-            <paper-input
-              id="registerUsername"
-              label="Your Email Address"
-              label="Email"
-              value="{{newAccount.username}}"
-              required
-              auto-validate
-              pattern="[a-zA-Z0-9_\.\+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-\.]+"
-              error-message="Please enter a valid email.">
-            </paper-input>
-            <paper-input
-              id="registerPassword"
-              label="Password"
-              type="password"
-              value="{{newAccount.password}}"
-              required
-              auto-validate
-              pattern="^(?=.*\d).{8,16}$"
-              error-message="Password must be between 8 and 16 characters long and include at least one number.">
-            </paper-input>
-            <paper-input
-              id="registerPasswordConfirm"
-              class="registerInput"
-              label="Confirm Password"
-              type="password"
-              value="{{newAccount.passwordConfirm}}"
-              required
-              auto-validate
-              pattern="{{newAccount.password}}"
-              error-message="Passwords must match">
-            </paper-input>
-            <paper-button on-tap="createNewAccount" class="guuey-button action-button">register</paper-button>
-          </div>
-
-      </paper-card>
-    </span>
+    </div>
 
   </template>
 
@@ -342,38 +58,47 @@
       Polymer({
 
         is: 'test-test',
-        ready:function(){
-          this.fire("pageLoaded", {page:this.page});
-        },
-        attached:function(){
-          this.$.registerWrapper.addEventListener('mouseover', this._applyHovered);
-          this.$.registerWrapper.addEventListener('mouseout', this._removeHovered);
-        },
         properties:{
-          loginDisplay:{
-            type:Boolean,
-            value:false
+          testData:{
+            type:Array,
+            value:[
+              {
+                fName:"bob",
+                lName:"dudeson",
+                body:"stuff and things"
+              },
+              {
+                fName:"bob",
+                lName:"dudeson",
+                body:"stuff and things"
+              },
+              {
+                fName:"bob",
+                lName:"dudeson",
+                body:"stuff and things"
+              },
+              {
+                fName:"bob",
+                lName:"dudeson",
+                body:"stuff and things"
+              },
+              {
+                fName:"bob",
+                lName:"dudeson",
+                body:"stuff and things"
+              },
+              {
+                fName:"bob",
+                lName:"dudeson",
+                body:"stuff and things"
+              },
+              {
+                fName:"bob",
+                lName:"dudeson",
+                body:"stuff and things"
+              }
+            ]
           }
-        },
-        behaviors:[
-
-        ],
-        _toggleTab:function(){
-          this.loginDisplay = !this.loginDisplay;
-        },
-        _applyHovered:function(e){
-          console.log(e);
-          console.log(this);
-          this.querySelector("paper-button").classList.add("white");
-        },
-        _removeHovered:function(e){
-          this.querySelector("paper-button").classList.remove("white");
-        },
-        _openForgotPass:function(){
-          this.$.forgotPass.show();
-        },
-        _closeForgotPass:function(){
-          this.$.forgotPass.hide();
         }
       });
 
